tests/resource/valid/definition/nested_mut_field.mamba
class B
    def my_num: Int := 10

class A
    def b: B


def a := A()
a.b.my_num := 20
