tests/resource/invalid/type/definition/nested_function_private_field.mamba
class A
    def b: B

class B
    def my_c(self) -> C => C()

class C
    def private my_field: Int := 10

def a := A()
print a.b.my_c().my_field
